# task-tiler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: logseq-ci.yml
src/: main.rs  parser.rs
task-tiler-logseq/: .gitignore  LICENSE  README.md  index.html  index.js  manifest.edn  package-lock.json  package.json  shadow-cljs.edn  spago.yaml  webpack.config.js
task-tiler-logseq/src/: Block.purs  Logseq.js  Logseq.purs  Main.purs  Topic.purs
task-tiler-logseq/src/Logseq/: Editor.js  Editor.purs  Logseq.js  Logseq.purs
task-tiler-logseq/src/Mqtt/: Mqtt.js  Mqtt.purs
task-tiler-logseq/src/Topic/: Checkbox.purs  Topic.purs
task-tiler-logseq/src/main/: core.cljs  logseq.cljs
task-tiler-logseq/test/: Block.purs  Main.purs  Topic.purs
task-tiler-server/: Cargo.toml
task-tiler-server/src/: main.rs
task-tiler-slint/: Cargo.toml  README.md  index.html
task-tiler-slint/.cargo/: config.toml
task-tiler-slint/src/: main.rs  parser.rs
task-tiler-slint/ui/: appwindow.slint  task.slint  timeformat.slint
task-tiler-supabase/supabase/: config.toml
task-tiler-supabase/supabase/migrations/: 20240316034109_remote_schema.sql  20240316034641_first_task_functions.sql  20240317172016_remote_schema.sql  20240317181945_add_logbook.sql  20240317222546_add_full_task.sql  20240318000926_get_client_tasks.sql
ui/: appwindow.slint  info.slint  task.slint  taskbutton.slint  timeformat.slint
