[package]
name = "tile-tasker"
version = "0.1.0"
authors = ["Alan Roe <alanroe92@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
ezsockets = { version = "0.6.2", features = ["rustls"] }
iter_tools = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
slint = "1.4"
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
slint-build = "1.4"
