[package]
name = "tile-tasker"
version = "0.1.0"
authors = ["Alan Roe <alanroe92@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.77"
ezsockets = { version = "0.6.2", default-features = false, optional = true }
iter_tools = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
slint = "1.4.1"
tokio = { version = "1.36.0", features = ["full"], optional = true }
console_error_panic_hook = "0.1"
tracing = "0.1.32"
tracing-subscriber = "0.3.20"
# web
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2.2", features = ["js"], optional = true }
wasm-bindgen-futures = {version = "0.4", optional = true}
tracing-wasm = {version = "0.2", optional = true}
wasmtimer = {version = "0.2.0", optional = true}

[build-dependencies]
slint-build = "1.4.1"

[features]
desktop = ["tokio", "ezsockets/default", "ezsockets/rustls"]
web = ["ezsockets/wasm_client", "wasm-bindgen", "getrandom", "wasm-bindgen-futures", "tracing-wasm", "wasmtimer"]
